# Verbot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: baidu_api_key.txt.example
docs/superpowers/skills/brainstorming/: SKILL.md
python/: cosyvoice_bridge.py  test_speaker.py  test_stability.py
scripts/: batch_test.py  build_release.sh  compare_asr_debug_audio.py  generate_test_audio.py  setup_mac.sh  strip_vision.py  test_music_e2e.sh
src/: asr_rejector.cpp  asr_rejector.h  audio_player.cpp  audio_player.h  audio_recorder.cpp  audio_recorder.h  china_cities.h  conversation.cpp  conversation.h  llm_client.cpp  llm_client.h  llm_task.cpp  llm_task.h  main.cpp  music_intent.cpp  music_intent.h  semantic_engine.cpp  semantic_engine.h  test_asr_rejector.cpp  test_music_intent.cpp  test_tts.cpp  test_whisper.cpp  tts_client.cpp  tts_client.h  tts_engine.cpp  tts_engine.h
